# book-db-lite

./: CMakeLists.txt  ChangeLog  INSTALL  README  full_commit.pl  install_linux.sh  install_manpage.sh  install_win.bat
doc/: DB_Schema  book-db-lite.1.man
lib/conversions/: README
share/: bookdbconv.pl
share/ui/: about_screen.glade  add_screen.glade  load_db.glade  remove_screen.glade  upgrade_dialog.glade
src/: book.h  bookdblite.pl  db_access.c  db_access.h  db_upgrade.c  main.c
